--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,8 +22,222 @@
         </div>
     </nav>
 
-    <section class="main" id="links-container">
-        <!-- Links will be dynamically inserted here -->
+    <section class="main">
+
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/water-purifier-spare-parts.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=40"
+                    class="link" data-link-index="49"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/2/383755705/ZJ/XC/IM/185273471/spun-filter-cartridge-500x500.jpg"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/diesel-generator.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=43"
+                    class="link" data-link-index="50"><img
+                        src="https://5.imimg.com/data5/PJ/TN/MY-6360634/mahindra-powerol-160-kva-genset-500x500.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/power-capacitors.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=46"
+                    class="link" data-link-index="51"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/12/369975117/II/UH/GH/21085075/power-factor-capacitor-500x500.jpg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/mouse-pads.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=49"
+                    class="link" data-link-index="52"><img
+                        src="https://5.imimg.com/data5/BN/PS/MY-1808887/mouse-pads-500x500.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/ladies-night-dress.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=39"
+                    class="link" data-link-index="45"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2021/9/ZK/MD/NY/20710189/new-1000x1000.JPG"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/beaded-sandals.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=34"
+                    class="link" data-link-index="46"><img
+                        src="https://4.imimg.com/data4/VB/LS/MY-21601276/womens-chappal-500x500.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/rubber-watch-bands.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=33"
+                    class="link" data-link-index="47"><img
+                        src="https://5.imimg.com/data5/YZ/VY/HK/SELLER-15566224/aplle-watch-strap-rubber-1000x1000.jpg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/disposable-car-seat-cover.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=30"
+                    class="link" data-link-index="48"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/3/399087911/NR/SZ/AG/153220439/oip-21-500x500.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/window-mosquito-net.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=24"
+                    class="link" data-link-index="41"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/3/395397413/RJ/MT/XQ/102172716/plastic-mosquito-mesh-500x500.png"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/solid-tires.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=21"
+                    class="link" data-link-index="42"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2022/11/UJ/YN/HI/30331837/12-00-20-tt-18-pr-cc-defence-part-no-lv6-mt14-2610-001519-500x500.png"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/aluminum-wires.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=27"
+                    class="link" data-link-index="43"><img
+                        src="https://5.imimg.com/data5/DY/NM/MY-41507713/1-250x250.jpg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/door-handles.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=15"
+                    class="link" data-link-index="44"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2020/12/HT/GK/HX/14417324/8029-copy-500x500.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+        
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/ladies-jeans.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=5"
+                    class="link" data-link-index="37"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/5/419435935/JM/JX/DO/195131304/ladies-wide-leg-jeans-1000x1000.png"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/arduino-board.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=12"
+                    class="link" data-link-index="38"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/2/393455129/RD/OQ/PD/1225448/arduino-nano-board-r3-with-ch340-chip-without-usb-cable-compatible-with-arduino-soldered-1000x1000.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/ladies-printed-t-shirt.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=6"
+                    class="link" data-link-index="39"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2022/12/DA/YX/DC/121323457/whatsapp-image-2022-11-09-at-3-53-14-pm-1--1000x1000.jpeg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://m.indiamart.com/impcat/bathroom-mirror.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=0624&utm_content=9"
+                    class="link" data-link-index="40"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/2/QS/TZ/GQ/144743175/round-led-light-mirror-1000x1000.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/car-covers.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=82&utm_term=automobile,parts&spares"
+                    class="link" data-link-index="33"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/8/337672347/GI/AG/KI/6093690/allextreme-vp7007-car-body-cover-compatible-with-volkswagen-polo-500x500.jpg"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/motorcycle-cover.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=85&utm_term=automobile,parts&spares"
+                    class="link" data-link-index="34"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/2/AP/WV/CC/18627269/motorcycle-cover-500x500.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/body-massage-oil.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=91&utm_term=herbal&ayurvedicproduct"
+                    class="link" data-link-index="35"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/2/UU/ZF/KY/1715402/body-massage-oil-250x250.jpg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/body-massager.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=88&utm_term=cosmetics&personalcare"
+                    class="link" data-link-index="36"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/10/354294595/MK/KK/RH/117058690/ems-massage-stick-mini-neck-massager-500x500.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/car-wash-detergent.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=70&utm_term=housewares&supplies"
+                    class="link" data-link-index="29"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/10/356164149/YT/XV/WT/837824/professional-liquid-laundry-detergent-250x250.jpg"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/woodland-shoes.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=73&utm_term=fashionaccessories&gear"
+                    class="link" data-link-index="30"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/7/329441213/ON/QP/GD/98305701/asics-safety-shoes-cp-201-500x500.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/vega-helmets.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=76&utm_term=automobile,parts&spares"
+                    class="link" data-link-index="31"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2022/2/PW/GO/QX/34684351/308-1000x1000.jpg"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/prestige-induction-cooker.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=79&utm_term=consumerelectronics"
+                    class="link" data-link-index="32"><img
+                        src="https://5.imimg.com/data5/KG/XS/MY-8901635/prestige-induction-cooktop-1000x1000.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
     </section>
 
     <script>
@@ -37,55 +251,28 @@
             }
 
             try {
-                const profileResponse = await fetch(`${apiUrl}/profiles/${userId}`, {
+                const response = await fetch(`${apiUrl}/profiles/${userId}`, {
                     method: 'GET',
                     credentials: 'include'
                 });
 
-                const linksResponse = await fetch(`${apiUrl}/links`, {
-                    method: 'GET',
-                    credentials: 'include'
-                });
-
-                const profileData = await profileResponse.json();
-                const linksData = await linksResponse.json();
-
-                if (profileResponse.ok && linksResponse.ok) {
-                    document.getElementById('username').textContent = profileData.name;
-                    document.getElementById('coinBank').textContent = profileData.coins;
+                const data = await response.json();
+                if (response.ok) {
+                    document.getElementById('username').textContent = data.name;
+                    document.getElementById('coinBank').textContent = data.coins;
                     document.getElementById('profilePic').addEventListener('click', () => {
-                        window.location.href = `profile.html?userId=${profileData.userId}`;
+                        window.location.href = `profile.html?userId=${data.userId}`;
                     });
 
-                    const linksContainer = document.getElementById('links-container');
-                    linksContainer.innerHTML = '';  // Clear existing links
+                    const links = document.querySelectorAll('.link');
+                    links.forEach((link) => {
+                        const linkIndex = parseInt(link.dataset.linkIndex, 10);
+                        const linkStatus = data.linkStatus[linkIndex];
 
-                    linksData.forEach((linkData) => {
-                        const linkBox = document.createElement('div');
-                        linkBox.classList.add('link-box');
-
-                        const linkImgDiv = document.createElement('div');
-                        linkImgDiv.classList.add('link-img');
-
-                        const link = document.createElement('a');
-                        link.href = linkData.url;
-                        link.classList.add('link');
-                        link.dataset.linkIndex = linkData.index; // Use the received index from backend
-
-                        const img = document.createElement('img');
-                        img.src = linkData.imageUrl;
-                        img.alt = `link${linkData.index}`;
-
-                        link.appendChild(img);
-                        linkImgDiv.appendChild(link);
-                        linkBox.appendChild(linkImgDiv);
-                        linksContainer.appendChild(linkBox);
-
-                        const linkStatus = profileData.linkStatus[linkData.index];
                         if (linkStatus) {
                             link.classList.add('clicked');
                             link.style.pointerEvents = 'none';
-                            img.style.filter = 'blur(3px)';
+                            link.querySelector('img').style.filter = 'blur(3px)';
                         }
 
                         link.addEventListener('click', async (event) => {
@@ -104,7 +291,7 @@
                                     const elapsedTime = Date.now() - startTime;
                                     clearTimeout(timeoutId);
                                     if (elapsedTime >= stayTime) {
-                                        updateCoinAndLinkState(linkData.index);
+                                        updateCoinAndLinkState(linkIndex);
                                     } else {
                                         alert("You did not stay at least 5 seconds on the clicked link page. You won't receive any coins.");
                                     }
@@ -117,7 +304,7 @@
                         });
                     });
                 } else {
-                    console.error('Error:', profileData.message);
+                    console.error('Error:', data.message);
                 }
             } catch (error) {
                 console.error('Error:', error);
@@ -158,6 +345,8 @@
                 console.error('Error updating link status:', error);
             }
         }
+
+
     </script>
 </body>
 
