--- a/adminPage.html
+++ b/adminPage.html
@@ -43,22 +43,22 @@
                 {
                     url: document.getElementById('affiliateLink1').value,
                     imageUrl: document.getElementById('imageLink1').value,
-                    index:14
+                    index: parseInt(document.getElementById('index1').value)
                 },
                 {
                     url: document.getElementById('affiliateLink2').value,
                     imageUrl: document.getElementById('imageLink2').value,
-                    index:15
+                    index: parseInt(document.getElementById('index2').value)
                 },
                 {
                     url: document.getElementById('affiliateLink3').value,
                     imageUrl: document.getElementById('imageLink3').value,
-                    index:16
+                    index: parseInt(document.getElementById('index3').value)
                 },
                 {
                     url: document.getElementById('affiliateLink4').value,
                     imageUrl: document.getElementById('imageLink4').value,
-                    index:17
+                    index: parseInt(document.getElementById('index4').value)
                 },
             ];
 
@@ -106,50 +106,45 @@
             <input type="password" id="adminPassword" required>
             <button type="submit">Login</button>
         </form>
-
         <div id="dashboard" class="hidden">
             <h2>Admin Dashboard</h2>
-            <form onsubmit="updateLinks(event)">
-                <h3>Update Links</h3>
-                <div class="input-group">
-                    <div class="input-column">
-                        <label for="index1">Index 1:</label>
-                        <input type="number" id="index1" placeholder="Enter index 1">
-                        <label for="affiliateLink1">Affiliate Product Link 1:</label>
-                        <input type="url" id="affiliateLink1" placeholder="Enter affiliate product link 1">
-                        <label for="imageLink1">Product Image Link 1:</label>
-                        <input type="url" id="imageLink1" placeholder="Enter product image link 1">
-                    </div>
-                    <div class="input-column">
-                        <label for="index2">Index 2:</label>
-                        <input type="number" id="index2" placeholder="Enter index 2">
-                        <label for="affiliateLink2">Affiliate Product Link 2:</label>
-                        <input type="url" id="affiliateLink2" placeholder="Enter affiliate product link 2">
-                        <label for="imageLink2">Product Image Link 2:</label>
-                        <input type="url" id="imageLink2" placeholder="Enter product image link 2">
-                    </div>
+            <form id="linkForm" onsubmit="updateLinks(event)">
+                <h3>Update Affiliate Links</h3>
+                <div class="link-input">
+                    <label for="affiliateLink1">Link 1 URL:</label>
+                    <input type="text" id="affiliateLink1" required>
+                    <label for="imageLink1">Link 1 Image URL:</label>
+                    <input type="text" id="imageLink1" required>
+                    <label for="index1">Link 1 Index:</label>
+                    <input type="number" id="index1" required>
                 </div>
-                <div class="input-group">
-                    <div class="input-column">
-                        <label for="index3">Index 3:</label>
-                        <input type="number" id="index3" placeholder="Enter index 3">
-                        <label for="affiliateLink3">Affiliate Product Link 3:</label>
-                        <input type="url" id="affiliateLink3" placeholder="Enter affiliate product link 3">
-                        <label for="imageLink3">Product Image Link 3:</label>
-                        <input type="url" id="imageLink3" placeholder="Enter product image link 3">
-                    </div>
-                    <div class="input-column">
-                        <label for="index4">Index 4:</label>
-                        <input type="number" id="index4" placeholder="Enter index 4">
-                        <label for="affiliateLink4">Affiliate Product Link 4:</label>
-                        <input type="url" id="affiliateLink4" placeholder="Enter affiliate product link 4">
-                        <label for="imageLink4">Product Image Link 4:</label>
-                        <input type="url" id="imageLink4" placeholder="Enter product image link 4">
-                    </div>
+                <div class="link-input">
+                    <label for="affiliateLink2">Link 2 URL:</label>
+                    <input type="text" id="affiliateLink2" required>
+                    <label for="imageLink2">Link 2 Image URL:</label>
+                    <input type="text" id="imageLink2" required>
+                    <label for="index2">Link 2 Index:</label>
+                    <input type="number" id="index2" required>
+                </div>
+                <div class="link-input">
+                    <label for="affiliateLink3">Link 3 URL:</label>
+                    <input type="text" id="affiliateLink3" required>
+                    <label for="imageLink3">Link 3 Image URL:</label>
+                    <input type="text" id="imageLink3" required>
+                    <label for="index3">Link 3 Index:</label>
+                    <input type="number" id="index3" required>
+                </div>
+                <div class="link-input">
+                    <label for="affiliateLink4">Link 4 URL:</label>
+                    <input type="text" id="affiliateLink4" required>
+                    <label for="imageLink4">Link 4 Image URL:</label>
+                    <input type="text" id="imageLink4" required>
+                    <label for="index4">Link 4 Index:</label>
+                    <input type="number" id="index4" required>
                 </div>
                 <button type="submit">Update Links</button>
             </form>
-        </div>        
+        </div>
     </div>
 </body>
 
