--- a/adminPage.html
+++ b/adminPage.html
@@ -69,6 +69,7 @@
             </form>
         </div>
     </div>
+
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
 
@@ -77,7 +78,7 @@
             const email = document.getElementById('adminEmail').value;
             const password = document.getElementById('adminPassword').value;
 
-            showSpinner();
+            showSpinner(); // Show spinner when login button is clicked
 
             try {
                 const response = await fetch(`${apiUrl}/admin/login`, {
@@ -100,7 +101,7 @@
             } catch (error) {
                 alert('An error occurred while logging in.');
             } finally {
-                hideSpinner();
+                hideSpinner(); // Hide spinner after response is received
             }
         }
 
@@ -129,7 +130,7 @@
                 },
             ];
 
-            showSpinner();
+            showSpinner(); // Show spinner when update links button is clicked
 
             try {
                 const response = await fetch(`${apiUrl}/links`, {
@@ -145,7 +146,7 @@
             } catch (error) {
                 alert('An error occurred while updating links.');
             } finally {
-                hideSpinner();
+                hideSpinner(); // Hide spinner after response is received
             }
         }
 
