--- a/adminPage.html
+++ b/adminPage.html
@@ -9,13 +9,6 @@
 </head>
 
 <body>
-    <div id="spinner" class="spinner hidden">
-        <div class="spinner-container">
-            <div class="spinner-dot"></div>
-            <div class="spinner-dot"></div>
-            <div class="spinner-dot"></div>
-        </div>
-    </div>
     <div class="container">
         <form id="loginForm" onsubmit="loginAdmin(event)">
             <h2>Admin Login</h2>
@@ -33,37 +26,61 @@
             <h2>Admin Dashboard</h2>
             <form id="linkForm" onsubmit="updateLinks(event)">
                 <h3>Update Affiliate Links</h3>
-                <div class="link-input">
-                    <label for="affiliateLink1">Link 1 URL:</label>
-                    <input type="text" id="affiliateLink1" required>
-                    <label for="imageLink1">Link 1 Image URL:</label>
-                    <input type="text" id="imageLink1" required>
-                    <label for="index1">Link 1 Index:</label>
-                    <input type="number" id="index1" required>
+                <div class="link-input-row">
+                    <div class="link-input">
+                        <label for="affiliateLink1">Link 1 URL:</label>
+                        <input type="text" id="affiliateLink1" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="imageLink1">Link 1 Image URL:</label>
+                        <input type="text" id="imageLink1" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="index1">Link 1 Index:</label>
+                        <input type="number" id="index1" required>
+                    </div>
                 </div>
-                <div class="link-input">
-                    <label for="affiliateLink2">Link 2 URL:</label>
-                    <input type="text" id="affiliateLink2" required>
-                    <label for="imageLink2">Link 2 Image URL:</label>
-                    <input type="text" id="imageLink2" required>
-                    <label for="index2">Link 2 Index:</label>
-                    <input type="number" id="index2" required>
+                <div class="link-input-row">
+                    <div class="link-input">
+                        <label for="affiliateLink2">Link 2 URL:</label>
+                        <input type="text" id="affiliateLink2" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="imageLink2">Link 2 Image URL:</label>
+                        <input type="text" id="imageLink2" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="index2">Link 2 Index:</label>
+                        <input type="number" id="index2" required>
+                    </div>
                 </div>
-                <div class="link-input">
-                    <label for="affiliateLink3">Link 3 URL:</label>
-                    <input type="text" id="affiliateLink3" required>
-                    <label for="imageLink3">Link 3 Image URL:</label>
-                    <input type="text" id="imageLink3" required>
-                    <label for="index3">Link 3 Index:</label>
-                    <input type="number" id="index3" required>
+                <div class="link-input-row">
+                    <div class="link-input">
+                        <label for="affiliateLink3">Link 3 URL:</label>
+                        <input type="text" id="affiliateLink3" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="imageLink3">Link 3 Image URL:</label>
+                        <input type="text" id="imageLink3" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="index3">Link 3 Index:</label>
+                        <input type="number" id="index3" required>
+                    </div>
                 </div>
-                <div class="link-input">
-                    <label for="affiliateLink4">Link 4 URL:</label>
-                    <input type="text" id="affiliateLink4" required>
-                    <label for="imageLink4">Link 4 Image URL:</label>
-                    <input type="text" id="imageLink4" required>
-                    <label for="index4">Link 4 Index:</label>
-                    <input type="number" id="index4" required>
+                <div class="link-input-row">
+                    <div class="link-input">
+                        <label for="affiliateLink4">Link 4 URL:</label>
+                        <input type="text" id="affiliateLink4" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="imageLink4">Link 4 Image URL:</label>
+                        <input type="text" id="imageLink4" required>
+                    </div>
+                    <div class="link-input">
+                        <label for="index4">Link 4 Index:</label>
+                        <input type="number" id="index4" required>
+                    </div>
                 </div>
                 <button type="submit">Update Links</button>
             </form>
@@ -77,8 +94,6 @@
             event.preventDefault();
             const email = document.getElementById('adminEmail').value;
             const password = document.getElementById('adminPassword').value;
-
-            showSpinner(); // Show spinner when login button is clicked
 
             try {
                 const response = await fetch(`${apiUrl}/admin/login`, {
@@ -100,8 +115,6 @@
                 }
             } catch (error) {
                 alert('An error occurred while logging in.');
-            } finally {
-                hideSpinner(); // Hide spinner after response is received
             }
         }
 
@@ -130,8 +143,6 @@
                 },
             ];
 
-            showSpinner(); // Show spinner when update links button is clicked
-
             try {
                 const response = await fetch(`${apiUrl}/links`, {
                     method: 'POST',
@@ -145,17 +156,7 @@
                 alert(data.message);
             } catch (error) {
                 alert('An error occurred while updating links.');
-            } finally {
-                hideSpinner(); // Hide spinner after response is received
             }
-        }
-
-        function showSpinner() {
-            document.getElementById('spinner').classList.remove('hidden');
-        }
-
-        function hideSpinner() {
-            document.getElementById('spinner').classList.add('hidden');
         }
 
         document.addEventListener('DOMContentLoaded', () => {
