--- a/adminPage.html
+++ b/adminPage.html
@@ -6,6 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="adminPage.css">
+    <style>
+        /* Spinner styles */
+        .spinner {
+            display: none;
+            width: 50px;
+            height: 40px;
+            text-align: center;
+            font-size: 10px;
+            margin: 20px auto;
+        }
+
+        .spinner>div {
+            background-color: #333;
+            height: 100%;
+            width: 6px;
+            display: inline-block;
+            margin-right: 3px;
+            animation: sk-chase 1.4s infinite ease-in-out;
+        }
+
+        .spinner .rect2 {
+            animation-delay: -1.2s;
+        }
+
+        .spinner .rect3 {
+            animation-delay: -1.1s;
+        }
+
+        .spinner .rect4 {
+            animation-delay: -1.0s;
+        }
+
+        @keyframes sk-chase {
+
+            0%,
+            40%,
+            100% {
+                transform: scaleY(0.4);
+            }
+
+            20% {
+                transform: scaleY(1.0);
+            }
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -85,6 +134,12 @@
                 <button type="submit">Update Links</button>
             </form>
         </div>
+        <div id="spinner" class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+        </div>
     </div>
 
     <script>
@@ -94,6 +149,9 @@
             event.preventDefault();
             const email = document.getElementById('adminEmail').value;
             const password = document.getElementById('adminPassword').value;
+
+            const spinner = document.getElementById('spinner');
+            spinner.style.display = 'block'; // Show spinner
 
             try {
                 const response = await fetch(`${apiUrl}/admin/login`, {
@@ -115,6 +173,8 @@
                 }
             } catch (error) {
                 alert('An error occurred while logging in.');
+            } finally {
+                spinner.style.display = 'none'; // Hide spinner after login attempt
             }
         }
 
@@ -143,6 +203,9 @@
                 },
             ];
 
+            const spinner = document.getElementById('spinner');
+            spinner.style.display = 'block'; // Show spinner
+
             try {
                 const response = await fetch(`${apiUrl}/links`, {
                     method: 'POST',
@@ -156,6 +219,8 @@
                 alert(data.message);
             } catch (error) {
                 alert('An error occurred while updating links.');
+            } finally {
+                spinner.style.display = 'none'; // Hide spinner after update attempt
             }
         }
 
