--- a/adminPage.html
+++ b/adminPage.html
@@ -8,16 +8,29 @@
     <link rel="stylesheet" href="adminPage.css">
     <style>
         /* Spinner styles */
-        .spinner {
+        .spinner-overlay {
             display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(5px);
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .spinner {
             width: 50px;
             height: 40px;
             text-align: center;
             font-size: 10px;
-            margin: 20px auto;
         }
 
-        .spinner>div {
+        .spinner > div {
             background-color: #333;
             height: 100%;
             width: 6px;
@@ -39,14 +52,9 @@
         }
 
         @keyframes sk-chase {
-
-            0%,
-            40%,
-            100% {
+            0%, 40%, 100% { 
                 transform: scaleY(0.4);
-            }
-
-            20% {
+            }  20% { 
                 transform: scaleY(1.0);
             }
         }
@@ -134,11 +142,13 @@
                 <button type="submit">Update Links</button>
             </form>
         </div>
-        <div id="spinner" class="spinner">
-            <div class="rect1"></div>
-            <div class="rect2"></div>
-            <div class="rect3"></div>
-            <div class="rect4"></div>
+        <div id="spinnerOverlay" class="spinner-overlay">
+            <div id="spinner" class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+            </div>
         </div>
     </div>
 
@@ -150,8 +160,8 @@
             const email = document.getElementById('adminEmail').value;
             const password = document.getElementById('adminPassword').value;
 
-            const spinner = document.getElementById('spinner');
-            spinner.style.display = 'block'; // Show spinner
+            const spinnerOverlay = document.getElementById('spinnerOverlay');
+            spinnerOverlay.style.display = 'flex'; // Show spinner
 
             try {
                 const response = await fetch(`${apiUrl}/admin/login`, {
@@ -174,7 +184,7 @@
             } catch (error) {
                 alert('An error occurred while logging in.');
             } finally {
-                spinner.style.display = 'none'; // Hide spinner after login attempt
+                spinnerOverlay.style.display = 'none'; // Hide spinner after login attempt
             }
         }
 
@@ -203,8 +213,8 @@
                 },
             ];
 
-            const spinner = document.getElementById('spinner');
-            spinner.style.display = 'block'; // Show spinner
+            const spinnerOverlay = document.getElementById('spinnerOverlay');
+            spinnerOverlay.style.display = 'flex'; // Show spinner
 
             try {
                 const response = await fetch(`${apiUrl}/links`, {
@@ -220,7 +230,7 @@
             } catch (error) {
                 alert('An error occurred while updating links.');
             } finally {
-                spinner.style.display = 'none'; // Hide spinner after update attempt
+                spinnerOverlay.style.display = 'none'; // Hide spinner after update attempt
             }
         }
 
