--- a/adminPage.html
+++ b/adminPage.html
@@ -8,26 +8,13 @@
     <link rel="stylesheet" href="adminPage.css">
     <style>
         /* Spinner styles */
-        .spinner-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(5px);
-            z-index: 1000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
         .spinner {
+            display: none;
             width: 50px;
             height: 40px;
             text-align: center;
             font-size: 10px;
+            margin: 20px auto;
         }
 
         .spinner>div {
