--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,16 +7,37 @@
     <title>User Dashboard</title>
     <link rel="stylesheet" href="Dashboard.css">
     <style>
-        /* Spinner styles */
-        .spinner {
-            margin: 70px auto;
-            width: 70px;
-            text-align: center;
-            display: none;
-            /* Initially hide spinner */
+        /* Spinner and background blur styles */
+        body.spinner-active {
+            overflow: hidden;
         }
 
-        .spinner>div {
+        body.spinner-active #content {
+            filter: blur(5px);
+            pointer-events: none;
+            user-select: none;
+        }
+
+        .spinner-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.8);
+            z-index: 1000;
+            display: none;
+        }
+
+        .spinner {
+            width: 70px;
+            text-align: center;
+        }
+
+        .spinner > div {
             width: 22px;
             height: 22px;
             background-color: #333;
@@ -34,7 +55,6 @@
         }
 
         @keyframes bounce {
-
             0%,
             80%,
             100% {
@@ -62,22 +82,27 @@
         </div>
     </nav>
 
-    <div id="spinner" class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
+    <div id="spinner-overlay" class="spinner-overlay">
+        <div id="spinner" class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
     </div>
 
-    <section class="main" id="links-container">
-        <!-- Links will be dynamically inserted here -->
-    </section>
+    <div id="content">
+        <section class="main" id="links-container">
+            <!-- Links will be dynamically inserted here -->
+        </section>
+    </div>
 
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
 
         document.addEventListener('DOMContentLoaded', async () => {
-            const spinner = document.getElementById('spinner');
-            spinner.style.display = 'block'; // Show spinner initially
+            const spinnerOverlay = document.getElementById('spinner-overlay');
+            spinnerOverlay.style.display = 'flex'; // Show spinner initially
+            document.body.classList.add('spinner-active');
 
             const userId = new URLSearchParams(window.location.search).get('userId');
             if (!userId) {
@@ -171,7 +196,8 @@
             } catch (error) {
                 console.error('Error:', error);
             } finally {
-                spinner.style.display = 'none'; // Hide spinner after loading completes (success or error)
+                spinnerOverlay.style.display = 'none'; // Hide spinner after loading completes (success or error)
+                document.body.classList.remove('spinner-active');
             }
         });
 
