--- a/adminPage.html
+++ b/adminPage.html
@@ -219,6 +219,7 @@
 
                 const data = await response.json();
                 alert(data.message);
+                window.location.href = 'index.html';
             } catch (error) {
                 alert('An error occurred while updating links.');
             } finally {
